Update 4_Analysis with new dataset(vix&stock)

--- a/4_Analysis/1_Sentimental Analysis.ipynb
+++ b/4_Analysis/1_Sentimental Analysis.ipynb
@@ -284,14 +284,34 @@
    "id": "6652243a",
    "metadata": {},
    "source": [
-    "- FinBERT has a mean of +0.071, which is roughly neutral and slightly positive, reasonable since FinBERT is specifically trained on financial data.\n",
+    "1. Mean Value\n",
+    "- FinBERT: The mean sentiment score is 0.123, indicating a slight positive bias in the sentiment analysis.\n",
+    "- Other BERT: The mean is -0.698, showing a strong negative bias in the sentiment scores.\n",
     "\n",
-    "- Other BERT's mean of -0.75 is super negative, which doesn't seem very reasonable -- it basically predicts all tweets as negative!\n",
+    "2. Standard Deviation\n",
+    "- FinBERT: The standard deviation is 0.418, suggesting that the sentiment scores are relatively concentrated around the mean.\n",
+    "- Other BERT: The standard deviation is 0.664, indicating a wider spread and more variability in the sentiment scores.\n",
     "\n",
-    "- Other BERT's 25%, 50%, and 75% are all negative, suggesting that it gives most of its tweets very negative scores.\n",
+    "3. Score Range\n",
+    "- Both models have similar minimum and maximum values (close to -1 and 1), which means both are capable of outputting the full range of sentiment scores.\n",
     "\n",
-    "- FinBERT's score is very close to 0, which is more in line with the short text and lots of neutral noise that characterizes tweets."
+    "4. Distribution\n",
+    "- FinBERT: The 25th, 50th (median), and 75th percentiles are all close to zero, with a slight positive skew.\n",
+    "- Other BERT: The percentiles are all strongly negative, with the median at approximately -0.988, indicating that most scores are negative.\n",
+    "\n",
+    "5. Interpretation\n",
+    "- FinBERT tends to produce more neutral to slightly positive sentiment scores, which may be more balanced for financial text.\n",
+    "- Other BERT outputs are heavily skewed towards negative sentiment, which could indicate a mismatch with the domain or a calibration issue.\n",
+    "\n",
+    "**Conclusion**:\n",
+    "- FinBERT provides sentiment scores that are more balanced and slightly positive, making it potentially more suitable for financial sentiment analysis. In contrast, the other BERT model shows a strong negative bias and higher variability, which may not accurately reflect the true sentiment distribution in financial texts."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c20a7e1",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
