Update final version

--- a/4_Analysis/1_TweetSentiment_Preprocessing.ipynb
+++ b/4_Analysis/1_TweetSentiment_Preprocessing.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "### 1. Data Loading & Preprocessing\n",
     "\n",
-    "- Read the raw tweet dataset (e.g. `cleaned_nvda.csv`), filter to the target years (e.g. 2017–2022), and keep only the relevant columns (date, cleaned text, tokenized text, emojis, etc.).\n",
+    "- Read the raw tweet dataset (e.g. `cleaned_nvda.csv`), filter to the target years (e.g. 2019–2021), and keep only the relevant columns (date, cleaned text, tokenized text, emojis, etc.).\n",
     "    \n",
     "- Conduct basic integrity checks and descriptive statistics (total tweets, unique tweets, average length, most common words, emoji usage, etc.).\n",
     "    \n",
@@ -317,40 +317,6 @@
       "Loading data...\n",
       "Validating data...\n",
       "Calculating descriptive statistics...\n",
-      "Validating data...\n",
-      "Calculating descriptive statistics...\n",
-      "\n",
-      "Basic Statistics:\n",
-      "Total tweets: 266660\n",
-      "Unique tweets: 222153\n",
-      "Average length (words): 9.1\n",
-      "Tweets with emojis: 78706\n",
-      "\n",
-      "Top 20 Most Common Words:\n",
-      "nvda: 280198\n",
-      "amd: 26862\n",
-      "go: 25249\n",
-      "buy: 20566\n",
-      "stock: 18875\n",
-      "call: 18530\n",
-      "today: 17261\n",
-      "market: 15638\n",
-      "like: 15356\n",
-      "day: 15277\n",
-      "get: 14733\n",
-      "aapl: 13734\n",
-      "spi: 13520\n",
-      "week: 13168\n",
-      "see: 12474\n",
-      "look: 12459\n",
-      "short: 11609\n",
-      "tsla: 11524\n",
-      "time: 11333\n",
-      "trade: 11252\n",
-      "\n",
-      "Average tweet length (chars): 49.8\n",
-      "\n",
-      "Initializing sentiment analyzers...\n",
       "\n",
       "Basic Statistics:\n",
       "Total tweets: 266660\n",
@@ -390,7 +356,6 @@
      "output_type": "stream",
      "text": [
       "Device set to use mps:0\n",
-      "Device set to use mps:0\n",
       "Device set to use mps:0\n"
      ]
     },
@@ -404,11 +369,6 @@
       "Non-financial tweets: 228295\n",
       "\n",
       "Performing sentiment analysis...\n",
-      "Analyzing financial texts with FinBERT...\n",
-      "Financial tweets: 38365\n",
-      "Non-financial tweets: 228295\n",
-      "\n",
-      "Performing sentiment analysis...\n",
       "Analyzing financial texts with FinBERT...\n"
      ]
     },
@@ -416,8 +376,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "FinBERT Sentiment: 100%|████████████████| 38365/38365 [4:20:22<00:00,  2.46it/s]\n",
-      "\n"
+      "FinBERT Sentiment: 100%|████████████████| 38365/38365 [1:02:36<00:00, 10.21it/s]\n"
      ]
     },
     {
@@ -431,8 +390,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "RoBERTa Sentiment: 100%|██████████████| 228295/228295 [1:17:53<00:00, 48.85it/s]\n",
-      "\n"
+      "RoBERTa Sentiment: 100%|█████████████| 228295/228295 [10:40:50<00:00,  5.94it/s]\n"
      ]
     },
     {
@@ -452,18 +410,6 @@
       "FinBERT: [-1.00, 1.00]\n",
       "RoBERTa: [-1.00, 1.00]\n",
       "\n",
-      "Analysis completed successfully!\n",
-      "Saved tweet-level sentiment file: tweet_level_sentiment.csv\n",
-      "\n",
-      "Creating daily sentiment aggregates...\n",
-      "\n",
-      "Saving results...\n",
-      "Saved daily sentiment files\n",
-      "\n",
-      "Final Score Ranges:\n",
-      "FinBERT: [-1.00, 1.00]\n",
-      "RoBERTa: [-1.00, 1.00]\n",
-      "\n",
       "Analysis completed successfully!\n"
      ]
     },
@@ -471,11 +417,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/rn/lc8n68_d7ld6yymqc_lsnrr00000gn/T/ipykernel_86249/890800433.py:151: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/rn/lc8n68_d7ld6yymqc_lsnrr00000gn/T/ipykernel_44603/890800433.py:151: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  .fillna(method='ffill')\n",
-      "/var/folders/rn/lc8n68_d7ld6yymqc_lsnrr00000gn/T/ipykernel_86249/890800433.py:151: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/rn/lc8n68_d7ld6yymqc_lsnrr00000gn/T/ipykernel_44603/890800433.py:151: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  .fillna(method='ffill')\n",
-      "/var/folders/rn/lc8n68_d7ld6yymqc_lsnrr00000gn/T/ipykernel_86249/890800433.py:151: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/rn/lc8n68_d7ld6yymqc_lsnrr00000gn/T/ipykernel_44603/890800433.py:151: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  .fillna(method='ffill')\n"
      ]
     }
@@ -671,56 +617,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daa39cda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    282114.00000\n",
+      "mean          2.56799\n",
+      "std           2.76649\n",
+      "min           1.00000\n",
+      "25%           1.00000\n",
+      "50%           2.00000\n",
+      "75%           3.00000\n",
+      "max         201.00000\n",
+      "Name: likes_num, dtype: float64\n",
+      "282114\n"
+     ]
+    }
+   ],
+   "source": [
+    "non_zero_likes = merged_df[merged_df['likes_num'] > 0]\n",
+    "print(non_zero_likes['likes_num'].describe())\n",
+    "print(len(non_zero_likes))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8b432be4",
    "metadata": {},
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8317c913",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "accc1dca",
-   "metadata": {},
-   "source": [
-    "## Result Analysis\n",
-    "\n",
-    "### (1) Data Volume & Basic Characteristics\n",
-    "\n",
-    "- **Total tweets:** 465,025\n",
-    "    \n",
-    "- **Unique tweets:** 391,275 (indicating some duplicates/retweets)\n",
-    "    \n",
-    "- **Average tweet length:** 8.5 words (45.8 characters)\n",
-    "    \n",
-    "- **Tweets containing emoji:** 95,341\n",
-    "    \n",
-    "- **Most common words:** “nvda”, “amd”, “buy”, “stock”, “market”, etc., reflecting a strong focus on equities and financial topics\n",
-    "    \n",
-    "\n",
-    "### (2) Financial vs. Non-Financial Tweet Classification\n",
-    "\n",
-    "- **Financial tweets:** 60,990 (≈ 13%)\n",
-    "    \n",
-    "- **Non-financial tweets:** 404,035 (≈ 87%)\n",
-    "    \n",
-    "- Indicates that although most tweets mention NVDA, only a small fraction employ explicit financial terminology or express investment viewpoints.\n",
-    "    \n",
-    "\n",
-    "### (3) Sentiment Analysis Results\n",
-    "\n",
-    "- **Financial tweets (FinBERT):** sentiment scores in the range [–1, 1], showing a reasonable distribution\n",
-    "    \n",
-    "- **Non-financial tweets (RoBERTa):** sentiment scores in the range [–1, 1], showing a reasonable distribution\n",
-    "    \n",
-    "- **Daily sentiment series:** aggregated as daily averages to facilitate alignment with market data in downstream analysis."
-   ]
   }
  ],
  "metadata": {
