--- a/4_Analysis/2_Data Alignment.ipynb
+++ b/4_Analysis/2_Data Alignment.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "bcbe71e1",
    "metadata": {},
    "outputs": [
@@ -59,11 +59,11 @@
       "       'nvda_return', 'vix_close'],\n",
       "      dtype='object')\n",
       "       index  avg_sentiment_score  tweet_count  sentiment_std  \\\n",
-      "0 2019-01-02            -0.028037          214       0.463867   \n",
-      "1 2019-01-03            -0.021352          281       0.470076   \n",
-      "2 2019-01-04             0.000000          210       0.403335   \n",
-      "3 2019-01-07             0.055147          272       0.421615   \n",
-      "4 2019-01-08            -0.029333          375       0.409373   \n",
+      "0 2019-01-02             0.032710          214       0.645574   \n",
+      "1 2019-01-03            -0.046263          281       0.622204   \n",
+      "2 2019-01-04             0.109524          210       0.612786   \n",
+      "3 2019-01-07             0.014706          272       0.619312   \n",
+      "4 2019-01-08            -0.085333          375       0.592442   \n",
       "\n",
       "        model_type  nvda_open  nvda_high  nvda_low  nvda_close  nvda_return  \\\n",
       "0  FinBERT+RoBERTa    3.26600    3.46200   3.25125     3.40550     0.020374   \n",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "803ab753",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,6 @@
      "output_type": "stream",
      "text": [
       "Loading data...\n",
-      "Classifying financial tweets...\n",
       "Classifying financial tweets...\n"
      ]
     },
@@ -169,8 +168,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing: 100%|██████████| 501908/501908 [00:03<00:00, 155275.25it/s]\n",
-      "\n"
+      "Processing: 100%|██████████| 501908/501908 [00:02<00:00, 229387.88it/s]\n"
      ]
     },
     {
@@ -195,7 +193,7 @@
     "\n",
     "def classify_financial_text(text):\n",
     "    \"\"\"\n",
-    "    判断文本是否包含金融相关术语\n",
+    "    identify financial-related tweets using regex patterns.\n",
     "    \"\"\"\n",
     "    try:\n",
     "        financial_pattern = r'\\b(?:\\$[A-Z]{1,5}\\b|stock(?:\\s*price|s?)|price\\s*target|market\\s*(?:cap|value)|' \\\n",
@@ -211,25 +209,25 @@
     "        return False\n",
     "\n",
     "def main():\n",
-    "    # 1. 加载数据\n",
+    "    # 1. load data\n",
     "    print(\"Loading data...\")\n",
     "    df = pd.read_csv(\"../2_data/cleaned_nvda.csv\")\n",
     "    initial_count = len(df)\n",
     "    \n",
-    "    # 2. 使用进度条显示分类过程\n",
+    "    # 2. use regex to classify financial-related tweets\n",
     "    print(\"Classifying financial tweets...\")\n",
     "    tqdm.pandas(desc=\"Processing\")\n",
     "    df['is_financial'] = df['Cleaned_Tweet'].progress_apply(classify_financial_text)\n",
     "    \n",
-    "    # 3. 只保留金融相关推文\n",
+    "    # 3. filter financial-related tweets\n",
     "    df_financial = df[df['is_financial']]\n",
     "    final_count = len(df_financial)\n",
     "    \n",
-    "    # 4. 保存结果\n",
+    "    # 4. save the filtered tweets\n",
     "    output_path = \"../2_data/financial_tweets_only.csv\"\n",
     "    df_financial.to_csv(output_path, index=False)\n",
     "    \n",
-    "    # 5. 打印统计信息\n",
+    "    # 5. print summary\n",
     "    print(\"\\nFiltering Results:\")\n",
     "    print(f\"Original tweets: {initial_count:,}\")\n",
     "    print(f\"Financial tweets: {final_count:,}\")\n",
@@ -243,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a75e30bf",
    "metadata": {},
    "outputs": [
@@ -251,37 +249,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading data files...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/rn/lc8n68_d7ld6yymqc_lsnrr00000gn/T/ipykernel_11550/91661345.py:9: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  sentiment_data = pd.read_csv(\"../2_data/tweet_level_sentiment.csv\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Loading data files...\n",
       "Merging sentiment scores...\n",
       "\n",
       "Merge Results:\n",
       "Original financial tweets: 65921\n",
       "After merging: 68113\n",
       "Missing sentiment scores: 27556\n",
-      "\n",
-      "Saved merged data to: ../2_data/financial_tweets_with_sentiment.csv\n",
-      "\n",
-      "Daily Sentiment Score Summary:\n",
-      "        Date  mean  count  std\n",
-      "0 2013-04-11   NaN      0  NaN\n",
-      "1 2013-04-12   NaN      0  NaN\n",
-      "2 2013-04-13   NaN      0  NaN\n",
-      "3 2013-04-15   NaN      0  NaN\n",
-      "4 2013-04-17   NaN      0  NaN\n",
       "\n",
       "Saved merged data to: ../2_data/financial_tweets_with_sentiment.csv\n",
       "\n",
@@ -301,18 +275,18 @@
     "from datetime import datetime\n",
     "\n",
     "def merge_sentiment_scores():\n",
-    "    # 1. 加载数据\n",
+    "    # 1. load data\n",
     "    print(\"Loading data files...\")\n",
     "    financial_tweets = pd.read_csv(\"../2_data/financial_tweets_only.csv\")\n",
     "    sentiment_data = pd.read_csv(\"../2_data/tweet_level_sentiment.csv\")\n",
     "    \n",
-    "    # 2. 确保日期格式一致\n",
+    "    # 2. make sure date columns are in datetime format\n",
     "    financial_tweets['Date'] = pd.to_datetime(financial_tweets['Date'])\n",
     "    sentiment_data['Date'] = pd.to_datetime(sentiment_data['Date'])\n",
     "    \n",
-    "    # 3. 合并数据\n",
+    "    # 3. merge sentiment scores with financial tweets\n",
     "    print(\"Merging sentiment scores...\")\n",
-    "    # 使用Date和Processed_Tweet列作为合并键\n",
+    "    # use 'Processed_Tweet' to match sentiment data\n",
     "    merged_df = pd.merge(\n",
     "        financial_tweets,\n",
     "        sentiment_data[['Date', 'Processed_Tweet', 'sentiment_score', 'sentiment_label']],\n",
@@ -320,18 +294,18 @@
     "        on=['Date', 'Processed_Tweet']\n",
     "    )\n",
     "    \n",
-    "    # 4. 检查合并结果\n",
+    "    # 4. check for missing sentiment scores\n",
     "    print(\"\\nMerge Results:\")\n",
     "    print(f\"Original financial tweets: {len(financial_tweets)}\")\n",
     "    print(f\"After merging: {len(merged_df)}\")\n",
     "    print(f\"Missing sentiment scores: {merged_df['sentiment_score'].isnull().sum()}\")\n",
     "    \n",
-    "    # 5. 保存结果\n",
+    "    # 5. save the merged data\n",
     "    output_path = \"../2_data/financial_tweets_with_sentiment.csv\"\n",
     "    merged_df.to_csv(output_path, index=False)\n",
     "    print(f\"\\nSaved merged data to: {output_path}\")\n",
     "    \n",
-    "    # 6. 显示每日平均情感分数\n",
+    "    # 6. show daily sentiment score summary\n",
     "    daily_sentiment = merged_df.groupby('Date')['sentiment_score'].agg([\n",
     "        'mean',\n",
     "        'count',\n",
