--- a/5_TradingStrategy/3_sentimentscores_trading_strategy.ipynb
+++ b/5_TradingStrategy/3_sentimentscores_trading_strategy.ipynb
@@ -413,7 +413,7 @@
     "print(\"==== Performance Summary ====\")\n",
     "evaluate_performance(df['strategy_ret_all'].dropna(), \"With Sentiment\")\n",
     "evaluate_performance(df['strategy_ret_no_sent'].dropna(), \"Without Sentiment\")\n",
-    "evaluate_performance(df['future_return'].dropna(), \"Benchmark (NVDA)\")"
+    "evaluate_performance(df['nvda_return'].dropna(), \"Benchmark (NVDA)\")"
    ]
   },
   {
